# projekt_nn-aeroscapes_semantic_segmentation

./: .gitignore  .markdownlint.json  README.md  presentation.md  pyproject.toml  template_description.md  test_preprocessing.ipynb
.github/workflows/: ci.yml
notebooks/: eda.ipynb  report.ipynb  test_preprocessing.ipynb  train_classifier.ipynb
scripts/: download_data.py  train_model.py
src/config/: aeroscapes_constants.py  constants.py  convnet_mnist_classifier.py  convnet_utkface_classifier.py  convnet_utkface_regressor.py  deeplabv3_aeroscapes.py  deeplabv3_dice_aeroscapes.py  deeplabv3_resnet101_best_aeroscapes.py  mlp_aeroscapes.py  mlp_utkface_classifier.py  schemas.py  unet_aeroscapes.py
src/config/lr_comparison/: 1e-2.py  1e-4.py
src/datasets/: aeroscapes.py  mnist.py  utkface.py
src/models/: classification_model.py  losses.py  regression_model.py  segmentation_model.py
src/models/architectures/: convolutional.py  mlp.py  mlp_segmentation.py  torchvision_segmentation.py  unet.py
src/models/modules/: conv_block.py
src/utils/: callbacks.py  config.py
tests/: test_download_data.py
