[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AeroscapesSegmentation"
version = "1.0"
description = ""
authors = [
    { name = "Weronika Tarnawska" },
    { name = "Adrian Walczak" },
    { name = "Patryk Maciąg" },
    { name = "Kacper Chmielewski" },
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">= 3.12"
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    # Linux GPU builds: install from pytorch-cu121 (matches driver CUDA 12.x).
    # Default PyPI torch on Linux targets newer CUDA toolkits (cu13) and triggers
    # "driver too old" on lab machines with 535.xx / CUDA 12.2-capable drivers.
    "torch==2.5.1",
    "torchvision==0.20.1",
    "lightning",
    "torchmetrics",
    "click",
    "wandb",
    "fiddle",
    "scipy",
    "jupyter",
    "matplotlib",
    "seaborn",
    "pandas",
    "Pillow",
    "tqdm",
    "kagglehub",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[project.optional-dependencies]
dev = ["ruff", "pytest"]

# mypy
[[tool.mypy.overrides]]
module = ["fiddle.*"]
follow_untyped_imports = true
ignore_missing_imports = true

# Build configuration
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
